Fix some code smells.